// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden snapshots — scoreRoutes output > fixture: beforeFirstInsertion 1`] = `
{
  "allScores": [
    {
      "clusterLabel": "Moderate cluster — 3 stops within 5 mi, 1.7 mi spread",
      "insertionAt": "Before stop 1 of 3",
      "nearestStop": 0.7,
      "routeId": "R-BF01",
      "techName": "Mike Torres",
      "total": 99,
      "wasOptimized": false,
    },
  ],
  "alternatives": [],
  "lead": {
    "date": "2026-05-19",
    "durationMinutes": 30,
    "lat": 43.39,
    "lng": -70.555,
    "routeArea": "general",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AM",
  },
  "prefWindow": {
    "endTime": "12:00 PM",
    "label": "AM",
    "startTime": "8:00 AM",
  },
  "recommendation": {
    "bestInsertion": {
      "addedDriveMinutes": 1,
      "addedDriveTime": "1 min",
      "addedMileage": "0 mi",
      "afterCustomerName": null,
      "afterIndex": -1,
      "backtracking": false,
      "backtrackingDetail": null,
      "backtrackingRisk": "None",
      "backtrackingSeverity": 0,
      "beforeCustomerName": "Afternoon Stop 1",
      "delayAdded": 30,
      "detourMiles": 0,
      "eodLabel": "Est. done by 10:09 AM",
      "eodSafe": true,
      "estimatedArrivalMin": 480,
      "estimatedArrivalTime": "8:00 AM",
      "gapAvailableMin": 3,
      "insertAfterLabel": null,
      "insertBeforeLabel": "Afternoon Stop 1 — Afternoon Stop 1, ME (8:03 AM)",
      "insertionPositionLabel": "Before stop 1 of 3",
      "localProximityMiles": 0.7,
      "minTimingBufferLabel": null,
      "minTimingBufferMin": null,
      "nextStop": {
        "address": "Afternoon Stop 1, ME",
        "customerName": "Afternoon Stop 1",
        "isTimed": false,
        "scheduledArrival": "8:03 AM",
        "windowLabel": null,
      },
      "optimizationConfidence": "High",
      "prevStop": null,
      "projectedRouteEndMin": 609,
      "projectedRouteEndTime": "10:09 AM",
      "serviceDuration": "30 min",
      "serviceDurationMin": 30,
      "startEndLocationFit": "Strong AM fit — 0.7 mi from tech start location",
      "suggestedWindow": "AM",
      "timedRisk": "none",
      "timedSafetyLabel": "Safe — no timed appointments affected",
      "timedViolations": [],
      "viable": false,
    },
    "capacity": {
      "currentHours": 3.5,
      "maxHours": 10.5,
      "remainingHours": 7,
    },
    "closestStop": {
      "address": "Afternoon Stop 1, ME",
      "customerName": "Afternoon Stop 1",
      "distanceMiles": 0.7,
      "scheduledTime": "8:03 AM",
      "stopIndex": 1,
    },
    "clusterDensity": 3,
    "clusterDetail": {
      "count": 3,
      "isContiguous": true,
      "label": "Moderate cluster — 3 stops within 5 mi, 1.7 mi spread",
      "quality": 14,
      "spreadMiles": 1.7,
    },
    "clusterLabel": "Moderate cluster — 3 stops within 5 mi, 1.7 mi spread",
    "nearestStopMiles": 0.7,
    "rank": 1,
    "reason": "Mike Torres will be near Afternoon Stop 1 (0.7 mi away) when this stop would be served. placed before the first stop — adds 0 mi. moderate cluster — 3 stops within 5 mi, 1.7 mi spread. no backtracking. no timed appointments affected. strong am fit — 0.7 mi from tech start location.",
    "routeId": "R-BF01",
    "routeSmoothness": "Tight gap",
    "scores": {
      "capacity": 67,
      "geographic": 96,
      "insertionProximity": 95,
      "routeAreaBonus": 0,
      "timeWindow": 100,
      "total": 99,
      "travelEfficiency": 100,
    },
    "stopCount": 3,
    "suggestedWindow": "AM",
    "techId": 6,
    "techName": "Mike Torres",
    "wasOptimized": false,
  },
  "routeArea": "general",
  "topMatches": [
    {
      "bestInsertion": {
        "addedDriveMinutes": 1,
        "addedDriveTime": "1 min",
        "addedMileage": "0 mi",
        "afterCustomerName": null,
        "afterIndex": -1,
        "backtracking": false,
        "backtrackingDetail": null,
        "backtrackingRisk": "None",
        "backtrackingSeverity": 0,
        "beforeCustomerName": "Afternoon Stop 1",
        "delayAdded": 30,
        "detourMiles": 0,
        "eodLabel": "Est. done by 10:09 AM",
        "eodSafe": true,
        "estimatedArrivalMin": 480,
        "estimatedArrivalTime": "8:00 AM",
        "gapAvailableMin": 3,
        "insertAfterLabel": null,
        "insertBeforeLabel": "Afternoon Stop 1 — Afternoon Stop 1, ME (8:03 AM)",
        "insertionPositionLabel": "Before stop 1 of 3",
        "localProximityMiles": 0.7,
        "minTimingBufferLabel": null,
        "minTimingBufferMin": null,
        "nextStop": {
          "address": "Afternoon Stop 1, ME",
          "customerName": "Afternoon Stop 1",
          "isTimed": false,
          "scheduledArrival": "8:03 AM",
          "windowLabel": null,
        },
        "optimizationConfidence": "High",
        "prevStop": null,
        "projectedRouteEndMin": 609,
        "projectedRouteEndTime": "10:09 AM",
        "serviceDuration": "30 min",
        "serviceDurationMin": 30,
        "startEndLocationFit": "Strong AM fit — 0.7 mi from tech start location",
        "suggestedWindow": "AM",
        "timedRisk": "none",
        "timedSafetyLabel": "Safe — no timed appointments affected",
        "timedViolations": [],
        "viable": false,
      },
      "capacity": {
        "currentHours": 3.5,
        "maxHours": 10.5,
        "remainingHours": 7,
      },
      "closestStop": {
        "address": "Afternoon Stop 1, ME",
        "customerName": "Afternoon Stop 1",
        "distanceMiles": 0.7,
        "scheduledTime": "8:03 AM",
        "stopIndex": 1,
      },
      "clusterDensity": 3,
      "clusterDetail": {
        "count": 3,
        "isContiguous": true,
        "label": "Moderate cluster — 3 stops within 5 mi, 1.7 mi spread",
        "quality": 14,
        "spreadMiles": 1.7,
      },
      "clusterLabel": "Moderate cluster — 3 stops within 5 mi, 1.7 mi spread",
      "nearestStopMiles": 0.7,
      "rank": 1,
      "reason": "Mike Torres will be near Afternoon Stop 1 (0.7 mi away) when this stop would be served. placed before the first stop — adds 0 mi. moderate cluster — 3 stops within 5 mi, 1.7 mi spread. no backtracking. no timed appointments affected. strong am fit — 0.7 mi from tech start location.",
      "routeId": "R-BF01",
      "routeSmoothness": "Tight gap",
      "scores": {
        "capacity": 67,
        "geographic": 96,
        "insertionProximity": 95,
        "routeAreaBonus": 0,
        "timeWindow": 100,
        "total": 99,
        "travelEfficiency": 100,
      },
      "stopCount": 3,
      "suggestedWindow": "AM",
      "techId": 6,
      "techName": "Mike Torres",
      "wasOptimized": false,
    },
  ],
  "totalRoutesScored": 1,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: endOfRouteCluster 1`] = `
{
  "allScores": [
    {
      "clusterLabel": "Moderate cluster — 3 stops within 5 mi, 1.2 mi spread",
      "insertionAt": "After stop 3 of 5",
      "nearestStop": 0.2,
      "routeId": "R-EC01",
      "techName": "Nina Park",
      "total": 74,
      "wasOptimized": true,
    },
  ],
  "alternatives": [],
  "lead": {
    "date": "2026-05-19",
    "durationMinutes": 30,
    "lat": 43.332,
    "lng": -70.572,
    "routeArea": "general",
    "serviceType": "Regular Service",
    "timeWindowPreference": "PM",
  },
  "prefWindow": {
    "endTime": "6:00 PM",
    "label": "PM",
    "startTime": "12:00 PM",
  },
  "recommendation": {
    "bestInsertion": {
      "addedDriveMinutes": 0,
      "addedDriveTime": "< 1 min",
      "addedMileage": "0.1 mi",
      "afterCustomerName": "Cluster Near 3",
      "afterIndex": 2,
      "backtracking": false,
      "backtrackingDetail": null,
      "backtrackingRisk": "None",
      "backtrackingSeverity": 0,
      "beforeCustomerName": "Cluster Near 2",
      "delayAdded": 30,
      "detourMiles": 0.1,
      "eodLabel": "Est. done by 12:03 PM",
      "eodSafe": true,
      "estimatedArrivalMin": 631,
      "estimatedArrivalTime": "10:31 AM",
      "gapAvailableMin": 0,
      "insertAfterLabel": "Cluster Near 3 — Cluster Near 3, ME (9:59 AM)",
      "insertBeforeLabel": "Cluster Near 2 — Cluster Near 2, ME (10:31 AM)",
      "insertionPositionLabel": "After stop 3 of 5",
      "localProximityMiles": 0.2,
      "minTimingBufferLabel": null,
      "minTimingBufferMin": null,
      "nextStop": {
        "address": "Cluster Near 2, ME",
        "customerName": "Cluster Near 2",
        "isTimed": false,
        "scheduledArrival": "10:31 AM",
        "windowLabel": null,
      },
      "optimizationConfidence": "High",
      "prevStop": {
        "address": "Cluster Near 3, ME",
        "customerName": "Cluster Near 3",
        "isTimed": false,
        "scheduledArrival": "9:59 AM",
      },
      "projectedRouteEndMin": 723,
      "projectedRouteEndTime": "12:03 PM",
      "serviceDuration": "30 min",
      "serviceDurationMin": 30,
      "startEndLocationFit": "Neutral",
      "suggestedWindow": "AM",
      "timedRisk": "none",
      "timedSafetyLabel": "Safe — no timed appointments affected",
      "timedViolations": [],
      "viable": false,
    },
    "capacity": {
      "currentHours": 3.5,
      "maxHours": 10.5,
      "remainingHours": 7,
    },
    "closestStop": {
      "address": "Cluster Near 2, ME",
      "customerName": "Cluster Near 2",
      "distanceMiles": 0.2,
      "scheduledTime": "10:31 AM",
      "stopIndex": 4,
    },
    "clusterDensity": 3,
    "clusterDetail": {
      "count": 3,
      "isContiguous": true,
      "label": "Moderate cluster — 3 stops within 5 mi, 1.2 mi spread",
      "quality": 18,
      "spreadMiles": 1.2,
    },
    "clusterLabel": "Moderate cluster — 3 stops within 5 mi, 1.2 mi spread",
    "nearestStopMiles": 0.2,
    "rank": 1,
    "reason": "Nina Park will be near Cluster Near 3 (0.2 mi away) when this stop would be served. fits between stop 3 and stop 4 of 5 — adds 0.1 mi and 0 min drive. moderate cluster — 3 stops within 5 mi, 1.2 mi spread. no backtracking. no timed appointments affected. route was internally optimized before this recommendation — this placement should remain valid once the office optimizes the day.",
    "routeId": "R-EC01",
    "routeSmoothness": "Tight gap",
    "scores": {
      "capacity": 67,
      "geographic": 99,
      "insertionProximity": 99,
      "routeAreaBonus": 0,
      "timeWindow": 15,
      "total": 74,
      "travelEfficiency": 99,
    },
    "stopCount": 5,
    "suggestedWindow": "AM",
    "techId": 5,
    "techName": "Nina Park",
    "wasOptimized": true,
  },
  "routeArea": "general",
  "topMatches": [
    {
      "bestInsertion": {
        "addedDriveMinutes": 0,
        "addedDriveTime": "< 1 min",
        "addedMileage": "0.1 mi",
        "afterCustomerName": "Cluster Near 3",
        "afterIndex": 2,
        "backtracking": false,
        "backtrackingDetail": null,
        "backtrackingRisk": "None",
        "backtrackingSeverity": 0,
        "beforeCustomerName": "Cluster Near 2",
        "delayAdded": 30,
        "detourMiles": 0.1,
        "eodLabel": "Est. done by 12:03 PM",
        "eodSafe": true,
        "estimatedArrivalMin": 631,
        "estimatedArrivalTime": "10:31 AM",
        "gapAvailableMin": 0,
        "insertAfterLabel": "Cluster Near 3 — Cluster Near 3, ME (9:59 AM)",
        "insertBeforeLabel": "Cluster Near 2 — Cluster Near 2, ME (10:31 AM)",
        "insertionPositionLabel": "After stop 3 of 5",
        "localProximityMiles": 0.2,
        "minTimingBufferLabel": null,
        "minTimingBufferMin": null,
        "nextStop": {
          "address": "Cluster Near 2, ME",
          "customerName": "Cluster Near 2",
          "isTimed": false,
          "scheduledArrival": "10:31 AM",
          "windowLabel": null,
        },
        "optimizationConfidence": "High",
        "prevStop": {
          "address": "Cluster Near 3, ME",
          "customerName": "Cluster Near 3",
          "isTimed": false,
          "scheduledArrival": "9:59 AM",
        },
        "projectedRouteEndMin": 723,
        "projectedRouteEndTime": "12:03 PM",
        "serviceDuration": "30 min",
        "serviceDurationMin": 30,
        "startEndLocationFit": "Neutral",
        "suggestedWindow": "AM",
        "timedRisk": "none",
        "timedSafetyLabel": "Safe — no timed appointments affected",
        "timedViolations": [],
        "viable": false,
      },
      "capacity": {
        "currentHours": 3.5,
        "maxHours": 10.5,
        "remainingHours": 7,
      },
      "closestStop": {
        "address": "Cluster Near 2, ME",
        "customerName": "Cluster Near 2",
        "distanceMiles": 0.2,
        "scheduledTime": "10:31 AM",
        "stopIndex": 4,
      },
      "clusterDensity": 3,
      "clusterDetail": {
        "count": 3,
        "isContiguous": true,
        "label": "Moderate cluster — 3 stops within 5 mi, 1.2 mi spread",
        "quality": 18,
        "spreadMiles": 1.2,
      },
      "clusterLabel": "Moderate cluster — 3 stops within 5 mi, 1.2 mi spread",
      "nearestStopMiles": 0.2,
      "rank": 1,
      "reason": "Nina Park will be near Cluster Near 3 (0.2 mi away) when this stop would be served. fits between stop 3 and stop 4 of 5 — adds 0.1 mi and 0 min drive. moderate cluster — 3 stops within 5 mi, 1.2 mi spread. no backtracking. no timed appointments affected. route was internally optimized before this recommendation — this placement should remain valid once the office optimizes the day.",
      "routeId": "R-EC01",
      "routeSmoothness": "Tight gap",
      "scores": {
        "capacity": 67,
        "geographic": 99,
        "insertionProximity": 99,
        "routeAreaBonus": 0,
        "timeWindow": 15,
        "total": 74,
        "travelEfficiency": 99,
      },
      "stopCount": 5,
      "suggestedWindow": "AM",
      "techId": 5,
      "techName": "Nina Park",
      "wasOptimized": true,
    },
  ],
  "totalRoutesScored": 1,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: excludedLeo 1`] = `
{
  "allScores": [],
  "alternatives": [],
  "lead": {
    "date": "2026-05-19",
    "durationMinutes": 30,
    "lat": 43.35,
    "lng": -70.545,
    "routeArea": "general",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AT",
  },
  "prefWindow": {
    "endTime": "6:00 PM",
    "label": "AT",
    "startTime": "8:00 AM",
  },
  "recommendation": null,
  "routeArea": "general",
  "topMatches": [],
  "totalRoutesScored": 0,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: fullyBookedTech 1`] = `
{
  "allScores": [
    {
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "insertionAt": "After stop 2 of 5",
      "nearestStop": 0.9,
      "routeId": "R-FB01",
      "techName": "Sarah Lee",
      "total": 92,
      "wasOptimized": false,
    },
  ],
  "alternatives": [],
  "lead": {
    "date": "2026-05-19",
    "durationMinutes": 30,
    "lat": 43.35,
    "lng": -70.545,
    "routeArea": "general",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AT",
  },
  "prefWindow": {
    "endTime": "6:00 PM",
    "label": "AT",
    "startTime": "8:00 AM",
  },
  "recommendation": {
    "bestInsertion": {
      "addedDriveMinutes": 0,
      "addedDriveTime": "< 1 min",
      "addedMileage": "0 mi",
      "afterCustomerName": "Baker Home",
      "afterIndex": 1,
      "backtracking": false,
      "backtrackingDetail": null,
      "backtrackingRisk": "None",
      "backtrackingSeverity": 0,
      "beforeCustomerName": "Clark Residence",
      "delayAdded": 30,
      "detourMiles": 0,
      "eodLabel": "Est. done by 11:15 AM",
      "eodSafe": true,
      "estimatedArrivalMin": 546,
      "estimatedArrivalTime": "9:06 AM",
      "gapAvailableMin": 2,
      "insertAfterLabel": "Baker Home — Baker Home, ME (8:34 AM)",
      "insertBeforeLabel": "Clark Residence — Clark Residence, ME (9:08 AM)",
      "insertionPositionLabel": "After stop 2 of 5",
      "localProximityMiles": 0.9,
      "minTimingBufferLabel": null,
      "minTimingBufferMin": null,
      "nextStop": {
        "address": "Clark Residence, ME",
        "customerName": "Clark Residence",
        "isTimed": false,
        "scheduledArrival": "9:08 AM",
        "windowLabel": null,
      },
      "optimizationConfidence": "High",
      "prevStop": {
        "address": "Baker Home, ME",
        "customerName": "Baker Home",
        "isTimed": false,
        "scheduledArrival": "8:34 AM",
      },
      "projectedRouteEndMin": 675,
      "projectedRouteEndTime": "11:15 AM",
      "serviceDuration": "30 min",
      "serviceDurationMin": 30,
      "startEndLocationFit": "Neutral — no start/end location data",
      "suggestedWindow": "AM",
      "timedRisk": "none",
      "timedSafetyLabel": "Safe — no timed appointments affected",
      "timedViolations": [],
      "viable": false,
    },
    "capacity": {
      "currentHours": 10.5,
      "maxHours": 10.5,
      "remainingHours": 0,
    },
    "closestStop": {
      "address": "Baker Home, ME",
      "customerName": "Baker Home",
      "distanceMiles": 0.9,
      "scheduledTime": "8:34 AM",
      "stopIndex": 2,
    },
    "clusterDensity": 5,
    "clusterDetail": {
      "count": 5,
      "isContiguous": true,
      "label": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "quality": 14,
      "spreadMiles": 3.6,
    },
    "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
    "nearestStopMiles": 0.9,
    "rank": 1,
    "reason": "Sarah Lee will be near Baker Home (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous). no backtracking. no timed appointments affected.",
    "routeId": "R-FB01",
    "routeSmoothness": "Tight gap",
    "scores": {
      "capacity": 0,
      "geographic": 94,
      "insertionProximity": 94,
      "routeAreaBonus": 0,
      "timeWindow": 100,
      "total": 92,
      "travelEfficiency": 100,
    },
    "stopCount": 5,
    "suggestedWindow": "AM",
    "techId": 3,
    "techName": "Sarah Lee",
    "wasOptimized": false,
  },
  "routeArea": "general",
  "topMatches": [
    {
      "bestInsertion": {
        "addedDriveMinutes": 0,
        "addedDriveTime": "< 1 min",
        "addedMileage": "0 mi",
        "afterCustomerName": "Baker Home",
        "afterIndex": 1,
        "backtracking": false,
        "backtrackingDetail": null,
        "backtrackingRisk": "None",
        "backtrackingSeverity": 0,
        "beforeCustomerName": "Clark Residence",
        "delayAdded": 30,
        "detourMiles": 0,
        "eodLabel": "Est. done by 11:15 AM",
        "eodSafe": true,
        "estimatedArrivalMin": 546,
        "estimatedArrivalTime": "9:06 AM",
        "gapAvailableMin": 2,
        "insertAfterLabel": "Baker Home — Baker Home, ME (8:34 AM)",
        "insertBeforeLabel": "Clark Residence — Clark Residence, ME (9:08 AM)",
        "insertionPositionLabel": "After stop 2 of 5",
        "localProximityMiles": 0.9,
        "minTimingBufferLabel": null,
        "minTimingBufferMin": null,
        "nextStop": {
          "address": "Clark Residence, ME",
          "customerName": "Clark Residence",
          "isTimed": false,
          "scheduledArrival": "9:08 AM",
          "windowLabel": null,
        },
        "optimizationConfidence": "High",
        "prevStop": {
          "address": "Baker Home, ME",
          "customerName": "Baker Home",
          "isTimed": false,
          "scheduledArrival": "8:34 AM",
        },
        "projectedRouteEndMin": 675,
        "projectedRouteEndTime": "11:15 AM",
        "serviceDuration": "30 min",
        "serviceDurationMin": 30,
        "startEndLocationFit": "Neutral — no start/end location data",
        "suggestedWindow": "AM",
        "timedRisk": "none",
        "timedSafetyLabel": "Safe — no timed appointments affected",
        "timedViolations": [],
        "viable": false,
      },
      "capacity": {
        "currentHours": 10.5,
        "maxHours": 10.5,
        "remainingHours": 0,
      },
      "closestStop": {
        "address": "Baker Home, ME",
        "customerName": "Baker Home",
        "distanceMiles": 0.9,
        "scheduledTime": "8:34 AM",
        "stopIndex": 2,
      },
      "clusterDensity": 5,
      "clusterDetail": {
        "count": 5,
        "isContiguous": true,
        "label": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
        "quality": 14,
        "spreadMiles": 3.6,
      },
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "nearestStopMiles": 0.9,
      "rank": 1,
      "reason": "Sarah Lee will be near Baker Home (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous). no backtracking. no timed appointments affected.",
      "routeId": "R-FB01",
      "routeSmoothness": "Tight gap",
      "scores": {
        "capacity": 0,
        "geographic": 94,
        "insertionProximity": 94,
        "routeAreaBonus": 0,
        "timeWindow": 100,
        "total": 92,
        "travelEfficiency": 100,
      },
      "stopCount": 5,
      "suggestedWindow": "AM",
      "techId": 3,
      "techName": "Sarah Lee",
      "wasOptimized": false,
    },
  ],
  "totalRoutesScored": 1,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: generalHappyPath 1`] = `
{
  "allScores": [
    {
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "insertionAt": "After stop 2 of 5",
      "nearestStop": 0.9,
      "routeId": "R-GP01",
      "techName": "Alex Smith",
      "total": 99,
      "wasOptimized": false,
    },
  ],
  "alternatives": [],
  "lead": {
    "date": "2026-05-19",
    "durationMinutes": 30,
    "lat": 43.35,
    "lng": -70.545,
    "routeArea": "general",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AM",
  },
  "prefWindow": {
    "endTime": "12:00 PM",
    "label": "AM",
    "startTime": "8:00 AM",
  },
  "recommendation": {
    "bestInsertion": {
      "addedDriveMinutes": 0,
      "addedDriveTime": "< 1 min",
      "addedMileage": "0 mi",
      "afterCustomerName": "Baker Home",
      "afterIndex": 1,
      "backtracking": false,
      "backtrackingDetail": null,
      "backtrackingRisk": "None",
      "backtrackingSeverity": 0,
      "beforeCustomerName": "Clark Residence",
      "delayAdded": 30,
      "detourMiles": 0,
      "eodLabel": "Est. done by 11:23 AM",
      "eodSafe": true,
      "estimatedArrivalMin": 550,
      "estimatedArrivalTime": "9:10 AM",
      "gapAvailableMin": 2,
      "insertAfterLabel": "Baker Home — Baker Home, ME (8:38 AM)",
      "insertBeforeLabel": "Clark Residence — Clark Residence, ME (9:12 AM)",
      "insertionPositionLabel": "After stop 2 of 5",
      "localProximityMiles": 0.9,
      "minTimingBufferLabel": null,
      "minTimingBufferMin": null,
      "nextStop": {
        "address": "Clark Residence, ME",
        "customerName": "Clark Residence",
        "isTimed": false,
        "scheduledArrival": "9:12 AM",
        "windowLabel": null,
      },
      "optimizationConfidence": "High",
      "prevStop": {
        "address": "Baker Home, ME",
        "customerName": "Baker Home",
        "isTimed": false,
        "scheduledArrival": "8:38 AM",
      },
      "projectedRouteEndMin": 683,
      "projectedRouteEndTime": "11:23 AM",
      "serviceDuration": "30 min",
      "serviceDurationMin": 30,
      "startEndLocationFit": "Strong AM fit — 4.4 mi from tech start location",
      "suggestedWindow": "AM",
      "timedRisk": "none",
      "timedSafetyLabel": "Safe — no timed appointments affected",
      "timedViolations": [],
      "viable": false,
    },
    "capacity": {
      "currentHours": 3.5,
      "maxHours": 10.5,
      "remainingHours": 7,
    },
    "closestStop": {
      "address": "Baker Home, ME",
      "customerName": "Baker Home",
      "distanceMiles": 0.9,
      "scheduledTime": "8:38 AM",
      "stopIndex": 2,
    },
    "clusterDensity": 5,
    "clusterDetail": {
      "count": 5,
      "isContiguous": true,
      "label": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "quality": 14,
      "spreadMiles": 3.6,
    },
    "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
    "nearestStopMiles": 0.9,
    "rank": 1,
    "reason": "Alex Smith will be near Baker Home (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous). no backtracking. no timed appointments affected. strong am fit — 4.4 mi from tech start location.",
    "routeId": "R-GP01",
    "routeSmoothness": "Tight gap",
    "scores": {
      "capacity": 67,
      "geographic": 94,
      "insertionProximity": 94,
      "routeAreaBonus": 0,
      "timeWindow": 100,
      "total": 99,
      "travelEfficiency": 100,
    },
    "stopCount": 5,
    "suggestedWindow": "AM",
    "techId": 99,
    "techName": "Alex Smith",
    "wasOptimized": false,
  },
  "routeArea": "general",
  "topMatches": [
    {
      "bestInsertion": {
        "addedDriveMinutes": 0,
        "addedDriveTime": "< 1 min",
        "addedMileage": "0 mi",
        "afterCustomerName": "Baker Home",
        "afterIndex": 1,
        "backtracking": false,
        "backtrackingDetail": null,
        "backtrackingRisk": "None",
        "backtrackingSeverity": 0,
        "beforeCustomerName": "Clark Residence",
        "delayAdded": 30,
        "detourMiles": 0,
        "eodLabel": "Est. done by 11:23 AM",
        "eodSafe": true,
        "estimatedArrivalMin": 550,
        "estimatedArrivalTime": "9:10 AM",
        "gapAvailableMin": 2,
        "insertAfterLabel": "Baker Home — Baker Home, ME (8:38 AM)",
        "insertBeforeLabel": "Clark Residence — Clark Residence, ME (9:12 AM)",
        "insertionPositionLabel": "After stop 2 of 5",
        "localProximityMiles": 0.9,
        "minTimingBufferLabel": null,
        "minTimingBufferMin": null,
        "nextStop": {
          "address": "Clark Residence, ME",
          "customerName": "Clark Residence",
          "isTimed": false,
          "scheduledArrival": "9:12 AM",
          "windowLabel": null,
        },
        "optimizationConfidence": "High",
        "prevStop": {
          "address": "Baker Home, ME",
          "customerName": "Baker Home",
          "isTimed": false,
          "scheduledArrival": "8:38 AM",
        },
        "projectedRouteEndMin": 683,
        "projectedRouteEndTime": "11:23 AM",
        "serviceDuration": "30 min",
        "serviceDurationMin": 30,
        "startEndLocationFit": "Strong AM fit — 4.4 mi from tech start location",
        "suggestedWindow": "AM",
        "timedRisk": "none",
        "timedSafetyLabel": "Safe — no timed appointments affected",
        "timedViolations": [],
        "viable": false,
      },
      "capacity": {
        "currentHours": 3.5,
        "maxHours": 10.5,
        "remainingHours": 7,
      },
      "closestStop": {
        "address": "Baker Home, ME",
        "customerName": "Baker Home",
        "distanceMiles": 0.9,
        "scheduledTime": "8:38 AM",
        "stopIndex": 2,
      },
      "clusterDensity": 5,
      "clusterDetail": {
        "count": 5,
        "isContiguous": true,
        "label": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
        "quality": 14,
        "spreadMiles": 3.6,
      },
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "nearestStopMiles": 0.9,
      "rank": 1,
      "reason": "Alex Smith will be near Baker Home (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous). no backtracking. no timed appointments affected. strong am fit — 4.4 mi from tech start location.",
      "routeId": "R-GP01",
      "routeSmoothness": "Tight gap",
      "scores": {
        "capacity": 67,
        "geographic": 94,
        "insertionProximity": 94,
        "routeAreaBonus": 0,
        "timeWindow": 100,
        "total": 99,
        "travelEfficiency": 100,
      },
      "stopCount": 5,
      "suggestedWindow": "AM",
      "techId": 99,
      "techName": "Alex Smith",
      "wasOptimized": false,
    },
  ],
  "totalRoutesScored": 1,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: maineMwfCluster 1`] = `
{
  "allScores": [
    {
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "insertionAt": "After stop 2 of 5",
      "nearestStop": 0.9,
      "routeId": "R-ME01",
      "techName": "Chris Adams",
      "total": 99,
      "wasOptimized": false,
    },
  ],
  "alternatives": [],
  "lead": {
    "date": "2026-05-18",
    "durationMinutes": 30,
    "lat": 43.35,
    "lng": -70.545,
    "routeArea": "maine",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AM",
  },
  "prefWindow": {
    "endTime": "12:00 PM",
    "label": "AM",
    "startTime": "8:00 AM",
  },
  "recommendation": {
    "bestInsertion": {
      "addedDriveMinutes": 0,
      "addedDriveTime": "< 1 min",
      "addedMileage": "0 mi",
      "afterCustomerName": "Baker Home",
      "afterIndex": 1,
      "backtracking": false,
      "backtrackingDetail": null,
      "backtrackingRisk": "None",
      "backtrackingSeverity": 0,
      "beforeCustomerName": "Clark Residence",
      "delayAdded": 30,
      "detourMiles": 0,
      "eodLabel": "Est. done by 11:23 AM",
      "eodSafe": true,
      "estimatedArrivalMin": 550,
      "estimatedArrivalTime": "9:10 AM",
      "gapAvailableMin": 2,
      "insertAfterLabel": "Baker Home — Baker Home, ME (8:38 AM)",
      "insertBeforeLabel": "Clark Residence — Clark Residence, ME (9:12 AM)",
      "insertionPositionLabel": "After stop 2 of 5",
      "localProximityMiles": 0.9,
      "minTimingBufferLabel": null,
      "minTimingBufferMin": null,
      "nextStop": {
        "address": "Clark Residence, ME",
        "customerName": "Clark Residence",
        "isTimed": false,
        "scheduledArrival": "9:12 AM",
        "windowLabel": null,
      },
      "optimizationConfidence": "High",
      "prevStop": {
        "address": "Baker Home, ME",
        "customerName": "Baker Home",
        "isTimed": false,
        "scheduledArrival": "8:38 AM",
      },
      "projectedRouteEndMin": 683,
      "projectedRouteEndTime": "11:23 AM",
      "serviceDuration": "30 min",
      "serviceDurationMin": 30,
      "startEndLocationFit": "Strong AM fit — 4.4 mi from tech start location",
      "suggestedWindow": "AM",
      "timedRisk": "none",
      "timedSafetyLabel": "Safe — no timed appointments affected",
      "timedViolations": [],
      "viable": false,
    },
    "capacity": {
      "currentHours": 3.5,
      "maxHours": 10.5,
      "remainingHours": 7,
    },
    "closestStop": {
      "address": "Baker Home, ME",
      "customerName": "Baker Home",
      "distanceMiles": 0.9,
      "scheduledTime": "8:38 AM",
      "stopIndex": 2,
    },
    "clusterDensity": 5,
    "clusterDetail": {
      "count": 5,
      "isContiguous": true,
      "label": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "quality": 14,
      "spreadMiles": 3.6,
    },
    "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
    "nearestStopMiles": 0.9,
    "rank": 1,
    "reason": "Chris Adams will be near Baker Home (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous). no backtracking. no timed appointments affected. strong am fit — 4.4 mi from tech start location.",
    "routeId": "R-ME01",
    "routeSmoothness": "Tight gap",
    "scores": {
      "capacity": 67,
      "geographic": 94,
      "insertionProximity": 94,
      "routeAreaBonus": 0,
      "timeWindow": 100,
      "total": 99,
      "travelEfficiency": 100,
    },
    "stopCount": 5,
    "suggestedWindow": "AM",
    "techId": 1,
    "techName": "Chris Adams",
    "wasOptimized": false,
  },
  "routeArea": "maine",
  "topMatches": [
    {
      "bestInsertion": {
        "addedDriveMinutes": 0,
        "addedDriveTime": "< 1 min",
        "addedMileage": "0 mi",
        "afterCustomerName": "Baker Home",
        "afterIndex": 1,
        "backtracking": false,
        "backtrackingDetail": null,
        "backtrackingRisk": "None",
        "backtrackingSeverity": 0,
        "beforeCustomerName": "Clark Residence",
        "delayAdded": 30,
        "detourMiles": 0,
        "eodLabel": "Est. done by 11:23 AM",
        "eodSafe": true,
        "estimatedArrivalMin": 550,
        "estimatedArrivalTime": "9:10 AM",
        "gapAvailableMin": 2,
        "insertAfterLabel": "Baker Home — Baker Home, ME (8:38 AM)",
        "insertBeforeLabel": "Clark Residence — Clark Residence, ME (9:12 AM)",
        "insertionPositionLabel": "After stop 2 of 5",
        "localProximityMiles": 0.9,
        "minTimingBufferLabel": null,
        "minTimingBufferMin": null,
        "nextStop": {
          "address": "Clark Residence, ME",
          "customerName": "Clark Residence",
          "isTimed": false,
          "scheduledArrival": "9:12 AM",
          "windowLabel": null,
        },
        "optimizationConfidence": "High",
        "prevStop": {
          "address": "Baker Home, ME",
          "customerName": "Baker Home",
          "isTimed": false,
          "scheduledArrival": "8:38 AM",
        },
        "projectedRouteEndMin": 683,
        "projectedRouteEndTime": "11:23 AM",
        "serviceDuration": "30 min",
        "serviceDurationMin": 30,
        "startEndLocationFit": "Strong AM fit — 4.4 mi from tech start location",
        "suggestedWindow": "AM",
        "timedRisk": "none",
        "timedSafetyLabel": "Safe — no timed appointments affected",
        "timedViolations": [],
        "viable": false,
      },
      "capacity": {
        "currentHours": 3.5,
        "maxHours": 10.5,
        "remainingHours": 7,
      },
      "closestStop": {
        "address": "Baker Home, ME",
        "customerName": "Baker Home",
        "distanceMiles": 0.9,
        "scheduledTime": "8:38 AM",
        "stopIndex": 2,
      },
      "clusterDensity": 5,
      "clusterDetail": {
        "count": 5,
        "isContiguous": true,
        "label": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
        "quality": 14,
        "spreadMiles": 3.6,
      },
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "nearestStopMiles": 0.9,
      "rank": 1,
      "reason": "Chris Adams will be near Baker Home (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous). no backtracking. no timed appointments affected. strong am fit — 4.4 mi from tech start location.",
      "routeId": "R-ME01",
      "routeSmoothness": "Tight gap",
      "scores": {
        "capacity": 67,
        "geographic": 94,
        "insertionProximity": 94,
        "routeAreaBonus": 0,
        "timeWindow": 100,
        "total": 99,
        "travelEfficiency": 100,
      },
      "stopCount": 5,
      "suggestedWindow": "AM",
      "techId": 1,
      "techName": "Chris Adams",
      "wasOptimized": false,
    },
  ],
  "totalRoutesScored": 1,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: missingCapacity 1`] = `
{
  "allScores": [
    {
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "insertionAt": "After stop 2 of 5",
      "nearestStop": 0.9,
      "routeId": "R-MC01",
      "techName": "Tom Harris",
      "total": 102,
      "wasOptimized": false,
    },
  ],
  "alternatives": [],
  "lead": {
    "date": "2026-05-19",
    "durationMinutes": 30,
    "lat": 43.35,
    "lng": -70.545,
    "routeArea": "general",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AT",
  },
  "prefWindow": {
    "endTime": "6:00 PM",
    "label": "AT",
    "startTime": "8:00 AM",
  },
  "recommendation": {
    "bestInsertion": {
      "addedDriveMinutes": 0,
      "addedDriveTime": "< 1 min",
      "addedMileage": "0 mi",
      "afterCustomerName": "Baker Home",
      "afterIndex": 1,
      "backtracking": false,
      "backtrackingDetail": null,
      "backtrackingRisk": "None",
      "backtrackingSeverity": 0,
      "beforeCustomerName": "Clark Residence",
      "delayAdded": 30,
      "detourMiles": 0,
      "eodLabel": "Est. done by 11:15 AM",
      "eodSafe": true,
      "estimatedArrivalMin": 546,
      "estimatedArrivalTime": "9:06 AM",
      "gapAvailableMin": 2,
      "insertAfterLabel": "Baker Home — Baker Home, ME (8:34 AM)",
      "insertBeforeLabel": "Clark Residence — Clark Residence, ME (9:08 AM)",
      "insertionPositionLabel": "After stop 2 of 5",
      "localProximityMiles": 0.9,
      "minTimingBufferLabel": null,
      "minTimingBufferMin": null,
      "nextStop": {
        "address": "Clark Residence, ME",
        "customerName": "Clark Residence",
        "isTimed": false,
        "scheduledArrival": "9:08 AM",
        "windowLabel": null,
      },
      "optimizationConfidence": "High",
      "prevStop": {
        "address": "Baker Home, ME",
        "customerName": "Baker Home",
        "isTimed": false,
        "scheduledArrival": "8:34 AM",
      },
      "projectedRouteEndMin": 675,
      "projectedRouteEndTime": "11:15 AM",
      "serviceDuration": "30 min",
      "serviceDurationMin": 30,
      "startEndLocationFit": "Neutral — no start/end location data",
      "suggestedWindow": "AM",
      "timedRisk": "none",
      "timedSafetyLabel": "Safe — no timed appointments affected",
      "timedViolations": [],
      "viable": false,
    },
    "capacity": {
      "currentHours": 0,
      "maxHours": 10.5,
      "remainingHours": 10.5,
    },
    "closestStop": {
      "address": "Baker Home, ME",
      "customerName": "Baker Home",
      "distanceMiles": 0.9,
      "scheduledTime": "8:34 AM",
      "stopIndex": 2,
    },
    "clusterDensity": 5,
    "clusterDetail": {
      "count": 5,
      "isContiguous": true,
      "label": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "quality": 14,
      "spreadMiles": 3.6,
    },
    "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
    "nearestStopMiles": 0.9,
    "rank": 1,
    "reason": "Tom Harris will be near Baker Home (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous). no backtracking. no timed appointments affected.",
    "routeId": "R-MC01",
    "routeSmoothness": "Tight gap",
    "scores": {
      "capacity": 100,
      "geographic": 94,
      "insertionProximity": 94,
      "routeAreaBonus": 0,
      "timeWindow": 100,
      "total": 102,
      "travelEfficiency": 100,
    },
    "stopCount": 5,
    "suggestedWindow": "AM",
    "techId": 4,
    "techName": "Tom Harris",
    "wasOptimized": false,
  },
  "routeArea": "general",
  "topMatches": [
    {
      "bestInsertion": {
        "addedDriveMinutes": 0,
        "addedDriveTime": "< 1 min",
        "addedMileage": "0 mi",
        "afterCustomerName": "Baker Home",
        "afterIndex": 1,
        "backtracking": false,
        "backtrackingDetail": null,
        "backtrackingRisk": "None",
        "backtrackingSeverity": 0,
        "beforeCustomerName": "Clark Residence",
        "delayAdded": 30,
        "detourMiles": 0,
        "eodLabel": "Est. done by 11:15 AM",
        "eodSafe": true,
        "estimatedArrivalMin": 546,
        "estimatedArrivalTime": "9:06 AM",
        "gapAvailableMin": 2,
        "insertAfterLabel": "Baker Home — Baker Home, ME (8:34 AM)",
        "insertBeforeLabel": "Clark Residence — Clark Residence, ME (9:08 AM)",
        "insertionPositionLabel": "After stop 2 of 5",
        "localProximityMiles": 0.9,
        "minTimingBufferLabel": null,
        "minTimingBufferMin": null,
        "nextStop": {
          "address": "Clark Residence, ME",
          "customerName": "Clark Residence",
          "isTimed": false,
          "scheduledArrival": "9:08 AM",
          "windowLabel": null,
        },
        "optimizationConfidence": "High",
        "prevStop": {
          "address": "Baker Home, ME",
          "customerName": "Baker Home",
          "isTimed": false,
          "scheduledArrival": "8:34 AM",
        },
        "projectedRouteEndMin": 675,
        "projectedRouteEndTime": "11:15 AM",
        "serviceDuration": "30 min",
        "serviceDurationMin": 30,
        "startEndLocationFit": "Neutral — no start/end location data",
        "suggestedWindow": "AM",
        "timedRisk": "none",
        "timedSafetyLabel": "Safe — no timed appointments affected",
        "timedViolations": [],
        "viable": false,
      },
      "capacity": {
        "currentHours": 0,
        "maxHours": 10.5,
        "remainingHours": 10.5,
      },
      "closestStop": {
        "address": "Baker Home, ME",
        "customerName": "Baker Home",
        "distanceMiles": 0.9,
        "scheduledTime": "8:34 AM",
        "stopIndex": 2,
      },
      "clusterDensity": 5,
      "clusterDetail": {
        "count": 5,
        "isContiguous": true,
        "label": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
        "quality": 14,
        "spreadMiles": 3.6,
      },
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous)",
      "nearestStopMiles": 0.9,
      "rank": 1,
      "reason": "Tom Harris will be near Baker Home (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 3.6 mi spread (contiguous). no backtracking. no timed appointments affected.",
      "routeId": "R-MC01",
      "routeSmoothness": "Tight gap",
      "scores": {
        "capacity": 100,
        "geographic": 94,
        "insertionProximity": 94,
        "routeAreaBonus": 0,
        "timeWindow": 100,
        "total": 102,
        "travelEfficiency": 100,
      },
      "stopCount": 5,
      "suggestedWindow": "AM",
      "techId": 4,
      "techName": "Tom Harris",
      "wasOptimized": false,
    },
  ],
  "totalRoutesScored": 1,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: nhApprovedTech 1`] = `
{
  "allScores": [
    {
      "clusterLabel": "Strong cluster — 4 stops within 5 mi, 2.8 mi spread (contiguous)",
      "insertionAt": "After stop 2 of 4",
      "nearestStop": 0.9,
      "routeId": "R-NH01",
      "techName": "Alex Gray",
      "total": 100,
      "wasOptimized": false,
    },
  ],
  "alternatives": [],
  "lead": {
    "date": "2026-05-18",
    "durationMinutes": 30,
    "lat": 43.1,
    "lng": -70.73,
    "routeArea": "new_hampshire",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AM",
  },
  "prefWindow": {
    "endTime": "12:00 PM",
    "label": "AM",
    "startTime": "8:00 AM",
  },
  "recommendation": {
    "bestInsertion": {
      "addedDriveMinutes": 0,
      "addedDriveTime": "< 1 min",
      "addedMileage": "0 mi",
      "afterCustomerName": "Seacoast Home 2",
      "afterIndex": 1,
      "backtracking": false,
      "backtrackingDetail": null,
      "backtrackingRisk": "None",
      "backtrackingSeverity": 0,
      "beforeCustomerName": "Seacoast Home 3",
      "delayAdded": 30,
      "detourMiles": 0,
      "eodLabel": "Est. done by 10:45 AM",
      "eodSafe": true,
      "estimatedArrivalMin": 549,
      "estimatedArrivalTime": "9:09 AM",
      "gapAvailableMin": 2,
      "insertAfterLabel": "Seacoast Home 2 — Seacoast Home 2, ME (8:37 AM)",
      "insertBeforeLabel": "Seacoast Home 3 — Seacoast Home 3, ME (9:11 AM)",
      "insertionPositionLabel": "After stop 2 of 4",
      "localProximityMiles": 0.9,
      "minTimingBufferLabel": null,
      "minTimingBufferMin": null,
      "nextStop": {
        "address": "Seacoast Home 3, ME",
        "customerName": "Seacoast Home 3",
        "isTimed": false,
        "scheduledArrival": "9:11 AM",
        "windowLabel": null,
      },
      "optimizationConfidence": "High",
      "prevStop": {
        "address": "Seacoast Home 2, ME",
        "customerName": "Seacoast Home 2",
        "isTimed": false,
        "scheduledArrival": "8:37 AM",
      },
      "projectedRouteEndMin": 645,
      "projectedRouteEndTime": "10:45 AM",
      "serviceDuration": "30 min",
      "serviceDurationMin": 30,
      "startEndLocationFit": "Strong AM fit — 3.7 mi from tech start location",
      "suggestedWindow": "AM",
      "timedRisk": "none",
      "timedSafetyLabel": "Safe — no timed appointments affected",
      "timedViolations": [],
      "viable": false,
    },
    "capacity": {
      "currentHours": 3.5,
      "maxHours": 10.5,
      "remainingHours": 7,
    },
    "closestStop": {
      "address": "Seacoast Home 3, ME",
      "customerName": "Seacoast Home 3",
      "distanceMiles": 0.9,
      "scheduledTime": "9:11 AM",
      "stopIndex": 3,
    },
    "clusterDensity": 4,
    "clusterDetail": {
      "count": 4,
      "isContiguous": true,
      "label": "Strong cluster — 4 stops within 5 mi, 2.8 mi spread (contiguous)",
      "quality": 14,
      "spreadMiles": 2.8,
    },
    "clusterLabel": "Strong cluster — 4 stops within 5 mi, 2.8 mi spread (contiguous)",
    "nearestStopMiles": 0.9,
    "rank": 1,
    "reason": "Alex Gray will be near Seacoast Home 2 (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 4 — adds 0 mi and 0 min drive. strong cluster — 4 stops within 5 mi, 2.8 mi spread (contiguous). no backtracking. no timed appointments affected. strong am fit — 3.7 mi from tech start location.",
    "routeId": "R-NH01",
    "routeSmoothness": "Tight gap",
    "scores": {
      "capacity": 67,
      "geographic": 94,
      "insertionProximity": 94,
      "routeAreaBonus": 8,
      "timeWindow": 100,
      "total": 100,
      "travelEfficiency": 100,
    },
    "stopCount": 4,
    "suggestedWindow": "AM",
    "techId": 10068,
    "techName": "Alex Gray",
    "wasOptimized": false,
  },
  "routeArea": "new_hampshire",
  "topMatches": [
    {
      "bestInsertion": {
        "addedDriveMinutes": 0,
        "addedDriveTime": "< 1 min",
        "addedMileage": "0 mi",
        "afterCustomerName": "Seacoast Home 2",
        "afterIndex": 1,
        "backtracking": false,
        "backtrackingDetail": null,
        "backtrackingRisk": "None",
        "backtrackingSeverity": 0,
        "beforeCustomerName": "Seacoast Home 3",
        "delayAdded": 30,
        "detourMiles": 0,
        "eodLabel": "Est. done by 10:45 AM",
        "eodSafe": true,
        "estimatedArrivalMin": 549,
        "estimatedArrivalTime": "9:09 AM",
        "gapAvailableMin": 2,
        "insertAfterLabel": "Seacoast Home 2 — Seacoast Home 2, ME (8:37 AM)",
        "insertBeforeLabel": "Seacoast Home 3 — Seacoast Home 3, ME (9:11 AM)",
        "insertionPositionLabel": "After stop 2 of 4",
        "localProximityMiles": 0.9,
        "minTimingBufferLabel": null,
        "minTimingBufferMin": null,
        "nextStop": {
          "address": "Seacoast Home 3, ME",
          "customerName": "Seacoast Home 3",
          "isTimed": false,
          "scheduledArrival": "9:11 AM",
          "windowLabel": null,
        },
        "optimizationConfidence": "High",
        "prevStop": {
          "address": "Seacoast Home 2, ME",
          "customerName": "Seacoast Home 2",
          "isTimed": false,
          "scheduledArrival": "8:37 AM",
        },
        "projectedRouteEndMin": 645,
        "projectedRouteEndTime": "10:45 AM",
        "serviceDuration": "30 min",
        "serviceDurationMin": 30,
        "startEndLocationFit": "Strong AM fit — 3.7 mi from tech start location",
        "suggestedWindow": "AM",
        "timedRisk": "none",
        "timedSafetyLabel": "Safe — no timed appointments affected",
        "timedViolations": [],
        "viable": false,
      },
      "capacity": {
        "currentHours": 3.5,
        "maxHours": 10.5,
        "remainingHours": 7,
      },
      "closestStop": {
        "address": "Seacoast Home 3, ME",
        "customerName": "Seacoast Home 3",
        "distanceMiles": 0.9,
        "scheduledTime": "9:11 AM",
        "stopIndex": 3,
      },
      "clusterDensity": 4,
      "clusterDetail": {
        "count": 4,
        "isContiguous": true,
        "label": "Strong cluster — 4 stops within 5 mi, 2.8 mi spread (contiguous)",
        "quality": 14,
        "spreadMiles": 2.8,
      },
      "clusterLabel": "Strong cluster — 4 stops within 5 mi, 2.8 mi spread (contiguous)",
      "nearestStopMiles": 0.9,
      "rank": 1,
      "reason": "Alex Gray will be near Seacoast Home 2 (0.9 mi away) when this stop would be served. fits between stop 2 and stop 3 of 4 — adds 0 mi and 0 min drive. strong cluster — 4 stops within 5 mi, 2.8 mi spread (contiguous). no backtracking. no timed appointments affected. strong am fit — 3.7 mi from tech start location.",
      "routeId": "R-NH01",
      "routeSmoothness": "Tight gap",
      "scores": {
        "capacity": 67,
        "geographic": 94,
        "insertionProximity": 94,
        "routeAreaBonus": 8,
        "timeWindow": 100,
        "total": 100,
        "travelEfficiency": 100,
      },
      "stopCount": 4,
      "suggestedWindow": "AM",
      "techId": 10068,
      "techName": "Alex Gray",
      "wasOptimized": false,
    },
  ],
  "totalRoutesScored": 1,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: nhNoApprovedTech 1`] = `
{
  "allScores": [],
  "alternatives": [],
  "lead": {
    "date": "2026-05-18",
    "durationMinutes": 30,
    "lat": 43.1,
    "lng": -70.73,
    "routeArea": "new_hampshire",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AM",
  },
  "noSafeRoute": true,
  "noSafeRouteMessage": "Alex Gray is not scheduled for this date — no New Hampshire route available.",
  "prefWindow": {
    "endTime": "12:00 PM",
    "label": "AM",
    "startTime": "8:00 AM",
  },
  "recommendation": null,
  "routeArea": "new_hampshire",
  "topMatches": [],
  "totalRoutesScored": 0,
}
`;

exports[`Golden snapshots — scoreRoutes output > fixture: twoTimedAnchors 1`] = `
{
  "allScores": [
    {
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 2.5 mi spread (contiguous)",
      "insertionAt": "After stop 2 of 5",
      "nearestStop": 0.4,
      "routeId": "R-TM01",
      "techName": "Dave Wilson",
      "total": 100,
      "wasOptimized": false,
    },
  ],
  "alternatives": [],
  "lead": {
    "date": "2026-05-19",
    "durationMinutes": 30,
    "lat": 43.47,
    "lng": -70.478,
    "routeArea": "general",
    "serviceType": "Regular Service",
    "timeWindowPreference": "AM",
  },
  "prefWindow": {
    "endTime": "12:00 PM",
    "label": "AM",
    "startTime": "8:00 AM",
  },
  "recommendation": {
    "bestInsertion": {
      "addedDriveMinutes": 0,
      "addedDriveTime": "< 1 min",
      "addedMileage": "0 mi",
      "afterCustomerName": "Timed Anchor 1",
      "afterIndex": 1,
      "backtracking": false,
      "backtrackingDetail": null,
      "backtrackingRisk": "None",
      "backtrackingSeverity": 0,
      "beforeCustomerName": "Free Stop B",
      "delayAdded": 30,
      "detourMiles": 0,
      "eodLabel": "Est. done by 2:33 PM",
      "eodSafe": true,
      "estimatedArrivalMin": 572,
      "estimatedArrivalTime": "9:32 AM",
      "gapAvailableMin": 1,
      "insertAfterLabel": "Timed Anchor 1 — Timed Anchor 1, ME (9:00 AM)",
      "insertBeforeLabel": "Free Stop B — Free Stop B, ME (9:33 AM)",
      "insertionPositionLabel": "After stop 2 of 5",
      "localProximityMiles": 0.4,
      "minTimingBufferLabel": "90 min before next timed appt",
      "minTimingBufferMin": 90,
      "nextStop": {
        "address": "Free Stop B, ME",
        "customerName": "Free Stop B",
        "isTimed": false,
        "scheduledArrival": "9:33 AM",
        "windowLabel": null,
      },
      "optimizationConfidence": "High",
      "prevStop": {
        "address": "Timed Anchor 1, ME",
        "customerName": "Timed Anchor 1",
        "isTimed": true,
        "scheduledArrival": "9:00 AM",
      },
      "projectedRouteEndMin": 873,
      "projectedRouteEndTime": "2:33 PM",
      "serviceDuration": "30 min",
      "serviceDurationMin": 30,
      "startEndLocationFit": "Strong AM fit — 3 mi from tech start location",
      "suggestedWindow": "AM",
      "timedRisk": "none",
      "timedSafetyLabel": "Safe — no timed appointments affected",
      "timedViolations": [],
      "viable": false,
    },
    "capacity": {
      "currentHours": 3.5,
      "maxHours": 10.5,
      "remainingHours": 7,
    },
    "closestStop": {
      "address": "Free Stop B, ME",
      "customerName": "Free Stop B",
      "distanceMiles": 0.4,
      "scheduledTime": "9:33 AM",
      "stopIndex": 3,
    },
    "clusterDensity": 5,
    "clusterDetail": {
      "count": 5,
      "isContiguous": true,
      "label": "Strong cluster — 5 stops within 5 mi, 2.5 mi spread (contiguous)",
      "quality": 19,
      "spreadMiles": 2.5,
    },
    "clusterLabel": "Strong cluster — 5 stops within 5 mi, 2.5 mi spread (contiguous)",
    "nearestStopMiles": 0.4,
    "rank": 1,
    "reason": "Dave Wilson will be near Timed Anchor 1 (0.4 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 2.5 mi spread (contiguous). no backtracking. no timed appointments affected. strong am fit — 3 mi from tech start location.",
    "routeId": "R-TM01",
    "routeSmoothness": "Tight gap",
    "scores": {
      "capacity": 67,
      "geographic": 97,
      "insertionProximity": 97,
      "routeAreaBonus": 0,
      "timeWindow": 100,
      "total": 100,
      "travelEfficiency": 100,
    },
    "stopCount": 5,
    "suggestedWindow": "AM",
    "techId": 2,
    "techName": "Dave Wilson",
    "wasOptimized": false,
  },
  "routeArea": "general",
  "topMatches": [
    {
      "bestInsertion": {
        "addedDriveMinutes": 0,
        "addedDriveTime": "< 1 min",
        "addedMileage": "0 mi",
        "afterCustomerName": "Timed Anchor 1",
        "afterIndex": 1,
        "backtracking": false,
        "backtrackingDetail": null,
        "backtrackingRisk": "None",
        "backtrackingSeverity": 0,
        "beforeCustomerName": "Free Stop B",
        "delayAdded": 30,
        "detourMiles": 0,
        "eodLabel": "Est. done by 2:33 PM",
        "eodSafe": true,
        "estimatedArrivalMin": 572,
        "estimatedArrivalTime": "9:32 AM",
        "gapAvailableMin": 1,
        "insertAfterLabel": "Timed Anchor 1 — Timed Anchor 1, ME (9:00 AM)",
        "insertBeforeLabel": "Free Stop B — Free Stop B, ME (9:33 AM)",
        "insertionPositionLabel": "After stop 2 of 5",
        "localProximityMiles": 0.4,
        "minTimingBufferLabel": "90 min before next timed appt",
        "minTimingBufferMin": 90,
        "nextStop": {
          "address": "Free Stop B, ME",
          "customerName": "Free Stop B",
          "isTimed": false,
          "scheduledArrival": "9:33 AM",
          "windowLabel": null,
        },
        "optimizationConfidence": "High",
        "prevStop": {
          "address": "Timed Anchor 1, ME",
          "customerName": "Timed Anchor 1",
          "isTimed": true,
          "scheduledArrival": "9:00 AM",
        },
        "projectedRouteEndMin": 873,
        "projectedRouteEndTime": "2:33 PM",
        "serviceDuration": "30 min",
        "serviceDurationMin": 30,
        "startEndLocationFit": "Strong AM fit — 3 mi from tech start location",
        "suggestedWindow": "AM",
        "timedRisk": "none",
        "timedSafetyLabel": "Safe — no timed appointments affected",
        "timedViolations": [],
        "viable": false,
      },
      "capacity": {
        "currentHours": 3.5,
        "maxHours": 10.5,
        "remainingHours": 7,
      },
      "closestStop": {
        "address": "Free Stop B, ME",
        "customerName": "Free Stop B",
        "distanceMiles": 0.4,
        "scheduledTime": "9:33 AM",
        "stopIndex": 3,
      },
      "clusterDensity": 5,
      "clusterDetail": {
        "count": 5,
        "isContiguous": true,
        "label": "Strong cluster — 5 stops within 5 mi, 2.5 mi spread (contiguous)",
        "quality": 19,
        "spreadMiles": 2.5,
      },
      "clusterLabel": "Strong cluster — 5 stops within 5 mi, 2.5 mi spread (contiguous)",
      "nearestStopMiles": 0.4,
      "rank": 1,
      "reason": "Dave Wilson will be near Timed Anchor 1 (0.4 mi away) when this stop would be served. fits between stop 2 and stop 3 of 5 — adds 0 mi and 0 min drive. strong cluster — 5 stops within 5 mi, 2.5 mi spread (contiguous). no backtracking. no timed appointments affected. strong am fit — 3 mi from tech start location.",
      "routeId": "R-TM01",
      "routeSmoothness": "Tight gap",
      "scores": {
        "capacity": 67,
        "geographic": 97,
        "insertionProximity": 97,
        "routeAreaBonus": 0,
        "timeWindow": 100,
        "total": 100,
        "travelEfficiency": 100,
      },
      "stopCount": 5,
      "suggestedWindow": "AM",
      "techId": 2,
      "techName": "Dave Wilson",
      "wasOptimized": false,
    },
  ],
  "totalRoutesScored": 1,
}
`;
